# extended-parachain-template

./: .dockerignore  .gitignore  Cargo.toml  README.md  zombienet.sh
.github/actions/: setup-try-runtime.yml
.github/actions/setup-try-runtime/: action.yml
.github/templates/setup-worker/: action.yml
.github/workflows/: build-deterministic-runtime.yml  build.yml  publish-docker.yml  test-and-lint.yml  try-runtime-devnet.yml  try-runtime-mainnet.yml  try-runtime.devnet.yml  try-runtime.mainnet.yml  try-runtime.yml
docker/: Dockerfile
docker/scripts/: inject_bootnodes.sh
docs/: governance.md  rust-setup.md  zombienet.md
evm-tracing/: Cargo.toml
evm-tracing/ext/: Cargo.toml
evm-tracing/primitives/rpc/debug/: Cargo.toml
evm-tracing/primitives/rpc/evm-tracing-events/: Cargo.toml
evm-tracing/primitives/rpc/evm-tracing-events/src/: evm.rs  gasometer.rs  runtime.rs
evm-tracing/primitives/rpc/txpool/: Cargo.toml
evm-tracing/rpc-core/debug/: Cargo.toml
evm-tracing/rpc-core/trace/: Cargo.toml
evm-tracing/rpc-core/txpool/: Cargo.toml
evm-tracing/rpc-core/types/: Cargo.toml
evm-tracing/rpc/debug/: Cargo.toml
evm-tracing/rpc/debug/src/: lib.rs
evm-tracing/rpc/trace/: Cargo.toml
evm-tracing/rpc/trace/src/: lib.rs
evm-tracing/rpc/txpool/: Cargo.toml
evm-tracing/rpc/txpool/src/: lib.rs
evm-tracing/runtime/evm_tracer/: Cargo.toml
evm-tracing/runtime/evm_tracer/src/: lib.rs
evm-tracing/src/formatters/: blockscout.rs  call_tracer.rs  trace_filter.rs
evm-tracing/src/listeners/: call_list.rs  raw.rs
integration-tests/: README.md  force_hrmp_open_channels.yml  transact.yml
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs  tracing.rs
pallets/motion/: Cargo.toml  README.md
pallets/motion/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
polkadot-launch/: config.json  rococo_local.json
runtime/: Cargo.toml
runtime/common/: Cargo.toml
runtime/common/src/: impls.rs  lib.rs  xcm_config.rs
runtime/devnet/: Cargo.toml
runtime/devnet/src/: lib.rs  xcm_config.rs
runtime/mainnet/: Cargo.toml
runtime/mainnet/src/: lib.rs  precompiles.rs  xcm_config.rs
runtime/src/: common.rs  currency.rs  lib.rs  precompiles.rs  xcm_config.rs
runtime/src/weights/: block_weights.rs  extrinsic_weights.rs  paritydb_weights.rs  rocksdb_weights.rs
zombienet-config/: 2r1p.toml  integration-tests-config.toml  rococo-local-config.toml  rococo-v0.9.28-config.toml
