[profile.release]
panic = "unwind"

[workspace]
members = ["node", "pallets/*", "runtime/mainnet", "runtime/devnet"]
resolver = "2"

[workspace.package]
authors = ["Anonymous"]
edition = "2021"
homepage = "https://substrate.io"
license = "Unlicense"
repository = "https://github.com/paritytech/extended-parachain-template/"

[workspace.dependencies]

# Common
clap = { version = "4.3.24", features = ["derive"] }
color-print = "0.3.4"
futures = "0.3.28"
hex-literal = { version = "0.4.1" }
jsonrpsee = { version = "0.16.2", features = ["server"] }
log = { version = "0.4.20", default-features = false }
parity-scale-codec = { version = "3.2.2", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2.9.0", default-features = false }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.85"
smallvec = "1.11.0"

# Local dependencies
devnet-runtime = { path = "runtime/devnet" }
mainnet-runtime = { path = "runtime/mainnet" }
pallet-motion = { path = "pallets/motion", default-features = false }
runtime-common = { path = "runtime/common", default-features = false }

# Substrate
frame-benchmarking = { version = "23.0.0", default-features = false }
frame-benchmarking-cli = { version = "27.0.0" }
frame-executive = { version = "23.0.0", default-features = false }
frame-support = { version = "23.0.0", default-features = false }
frame-system = { version = "23.0.0", default-features = false }
frame-system-benchmarking = { version = "23.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "21.0.0", default-features = false }
frame-try-runtime = { version = "0.29.0", default-features = false }
pallet-aura = { version = "22.0.0", default-features = false }
pallet-authorship = { version = "23.0.0", default-features = false }
pallet-assets = { version = "24.0.0", default-features = false }
pallet-balances = { version = "23.0.0", default-features = false }
pallet-collective = { version = "23.0.0", default-features = false }
pallet-membership = { version = "23.0.0", default-features = false }
pallet-multisig = { version = "23.0.0", default-features = false }
pallet-preimage = { version = "23.0.0", default-features = false }
pallet-session = { version = "23.0.0", default-features = false }
pallet-scheduler = { version = "24.0.0", default-features = false }
pallet-sudo = { version = "23.0.0", default-features = false }
pallet-timestamp = { version = "22.0.0", default-features = false }
pallet-transaction-payment = { version = "23.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "25.0.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "23.0.0", default-features = false }
pallet-utility = { version = "23.0.0", default-features = false }
sc-basic-authorship = { version = "0.29.0" }
sc-chain-spec = { version = "22.0.0" }
sc-cli = { version = "0.31.0" }
sc-client-api = { version = "23.0.0" }
sc-consensus = { version = "0.28.0" }
sc-executor = { version = "0.27.0" }
sc-network = { version = "0.29.0" }
sc-network-sync = { version = "0.28.0" }
sc-rpc = { version = "24.0.0" }
sc-service = { version = "0.30.0" }
sc-sysinfo = { version = "22.0.0" }
sc-telemetry = { version = "10.0.0" }
sc-tracing = { version = "23.0.0" }
sc-transaction-pool = { version = "23.0.0" }
sc-transaction-pool-api = { version = "23.0.0" }
sc-offchain = { version = "24.0.0" }
sp-api = { version = "21.0.0", default-features = false }
sp-block-builder = { version = "21.0.0", default-features = false }
sp-blockchain = { version = "23.0.0" }
sp-consensus-aura = { version = "0.27.0", default-features = false }
sp-core = { version = "23.0.0", default-features = false }
sp-inherents = { version = "21.0.0", default-features = false }
sp-io = { version = "25.0.0", default-features = false }
sp-keystore = { version = "0.29.0" }
sp-offchain = { version = "21.0.0", default-features = false }
sp-runtime = { version = "26.0.0", default-features = false }
sp-session = { version = "22.0.0", default-features = false }
sp-std = { version = "10.0.0", default-features = false }
sp-timestamp = { version = "21.0.0" }
sp-transaction-pool = { version = "21.0.0", default-features = false }
sp-version = { version = "24.0.0", default-features = false }
substrate-build-script-utils = { version = "7.0.0" }
substrate-frame-rpc-system = { version = "23.0.0" }
substrate-prometheus-endpoint = { version = "0.14.0" }
substrate-wasm-builder = { version = "12.0.0" }
try-runtime-cli = { version = "0.33.0" }

# Cumulus
assets-common = { version = "0.2.0", default-features = false }
cumulus-client-cli = { version = "0.2.0" }
cumulus-client-consensus-aura = { version = "0.2.0" }
cumulus-client-consensus-common = { version = "0.2.0" }
cumulus-client-collator = { version = "0.2.0" }
cumulus-client-service = { version = "0.2.0" }
cumulus-client-consensus-proposer = { version = "0.2.0" }
cumulus-pallet-aura-ext = { version = "0.2.0", default-features = false }
cumulus-pallet-dmp-queue = { version = "0.2.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.2.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "4.0.0", default-features = false }
cumulus-pallet-xcm = { version = "0.2.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.2.0", default-features = false }
cumulus-primitives-core = { version = "0.2.0", default-features = false }
cumulus-primitives-parachain-inherent = { version = "0.2.0" }
cumulus-primitives-timestamp = { version = "0.2.0", default-features = false }
cumulus-primitives-utility = { version = "0.2.0", default-features = false }
cumulus-relay-chain-inprocess-interface = { version = "0.2.0" }
cumulus-relay-chain-interface = { version = "0.2.0" }
cumulus-relay-chain-minimal-node = { version = "0.2.0" }
cumulus-relay-chain-rpc-interface = { version = "0.2.0" }
pallet-collator-selection = { version = "4.0.0", default-features = false }
parachain-info = { package = "staging-parachain-info", version = "0.2.0", default-features = false }
parachains-common = { version = "2.0.0", default-features = false }

# Polkadot
pallet-xcm = { version = "2.0.0", default-features = false }
polkadot-cli = { version = "2.0.0", features = [
  "rococo-native",
] }
polkadot-parachain-primitives = { version = "1.0.0", default-features = false }
polkadot-primitives = { version = "2.0.0", default-features = false }
polkadot-runtime-common = { version = "2.0.0", default-features = false }
polkadot-service = { version = "2.0.0" }
xcm = { package = "staging-xcm", version = "2.0.0", default-features = false }
xcm-builder = { package = "staging-xcm-builder", version = "2.0.0", default-features = false }
xcm-executor = { package = "staging-xcm-executor", version = "2.0.0", default-features = false }
